Mon Mar 18 21:49:39 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Add KRB5_RUN_FLAGS

	* Makefile.in: Use runtime flags.

Mon Mar 18 17:30:54 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* sn2princ.c (krb5_sname_to_principal): Add casting to avoid warnings.

Mon Mar 18 14:18:58 EST 1996  Richard Basch  <basch@lehman.com>

	* sn2princ.c: Do not try to re-assign const variables.

Sun Mar 17 20:42:17 1996  Ezra Peisach  <epeisach@mit.edu>

        * configure.in: Add USE_ANAME, KRB5_LIBRARIES

	* Makefile.in: Properly use libraries as specified by configure

Wed Mar 13 13:11:49 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* t_std_conf.c: Include string.h

Thu Feb 29 16:14:46 1996  Theodore Y. Ts'o  <tytso@dcl>

	* sendto_kdc.c (krb5_sendto_kdc): Take out calls to
		SOCKET_INITIALIZE and SOCKET_CLEANUP.  This gets done in
		win_glue.c, and we only need to do this once.  (XXX What
		about Macintosh?)

Tue Feb 27 18:48:03 1996  Theodore Y. Ts'o  <tytso@dcl>

	* hostaddr.c (krb5_os_hostaddr): Use #define NEED_SOCKETS instead
		of #including <netdb.h>  (this breaks under windows).

Mon Feb 26 17:04:26 1996  Theodore Y. Ts'o  <tytso@dcl>

	* promptusr.c: Don't compile promptusr for Windows or Macintosh.

Sat Feb 24 18:57:56 1996  Theodore Y. Ts'o  <tytso@dcl>

	* ktdefname.c (krb5_kt_default_name): Under Windows, assume that
		the keytab file is located in the Windows directory.

Thu Feb 22 13:16:16 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (check-unix): Set LD_LIBRARY_PATH for kdb5_anadd.

	* hostaddr.c (krb5_os_hostaddr): Set magic number in structure.

	* full_ipadr.c (krb5_make_full_ipaddr): Set magic number in structure.

Sat Feb 17 00:05:38 1996  Theodore Y. Ts'o  <tytso@pao.MIT.EDU>

	* def_realm.c (krb5_get_default_realm): If the configuration file
		does not exist (context->profile == NULL) return
		KRB5_CONFIG_CANTOPEN; if the default realm is not defined