@@ -1,3 +1,9 @@
+Wed Mar 27 18:31:44 1996  Theodore Y. Ts'o  <tytso@dcl>
+
+	* macsock.c (gethostbyname, gethostbyaddr): Use universal
+		procedure pointers (UPP), which are required on the Mac
+		Power PC.
+
 Mon Mar 18 21:49:39 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* configure.in: Add KRB5_RUN_FLAGS
